updated file paths where javascript is included

--- a/html/home_page.html
+++ b/html/home_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<script src="js/home_page_javascript.js"></script>
+<script src="js/home_page.js"></script>
 
 <meta charset="UTF-8" lang="en">
 <meta name="viewport" content="width=device-width,initial-scale=1">
