Completely overhauled project files to better improve scalability, also made staff login redirect to the staff page

--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <head>
-<script src="js/home_page.js"></script>
-
+<script src="../../scripts/home_page_functions.js"></script>
 <meta charset="UTF-8" lang="en">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>DOYRMS Registration</title>
@@ -10,7 +9,7 @@
 
 <body>
   <header class="text" id="main_header">
-    <img src="img/logo.png"></img>
+    <img src="../../images/logo.png"></img>
     <h1>DOYRMS Registration</h1>
     <navbar>
       <button class="navbar_button blue_button" id="back_button" onclick="backButton()"><span class="left_arrow"></span><spacer></spacer><h5>BACK</h5></button>
