Added header and navbar to staff page; Added a functioning logout button to the staff page

--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8" lang="en">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>DOYRMS Registration</title>
-
 </head>
 
 <body>
@@ -17,7 +16,7 @@
       <span class="divider"></span>
       <button onclick="toggleFooter()"><h5>CONTACT</h5></button>
       <span class="divider"></span>
-      <button onClick="databaseConnect()"><h5>HELP</h5></button>
+      <button><h5>HELP</h5></button>
     </navbar>
   </header>
   <section class="text" id="login_box">
