Added a logout button and basic structure to the admin page

--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -1,4 +1,23 @@
+<!DOCTYPE html>
 <head>
 <script src="../../scripts/admin_page_functions.js"></script>
-<h1>This is the admin page</h1>
+<meta charset="UTF-8" lang="en">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Admin | DOYRMS Registration</title>
 </head>
+
+<body>
+  <header class="text" id="main_header">
+    <img src="../../images/logo.png"></img>
+    <h1>DOYRMS Registration</h1>
+    <navbar>
+      <form method="post">
+        <button type="submit" class="navbar_button blue_button" id="sign_out_button" name="admin_sign_out"><span class="left_arrow"></span><spacer></spacer><h5>LOG OUT</h5></button>
+      </form>
+      <span class="divider"></span>
+      <button><h5>CONTACT</h5></button>
+      <span class="divider"></span>
+      <button><h5>HELP</h5></button>
+    </navbar>
+  </header>
+</body>
