--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -3,7 +3,7 @@
 <script src="../../scripts/home_page_functions.js"></script>
 <meta charset="UTF-8" lang="en">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>DOYRMS Registration</title>
+<title>Home | DOYRMS Registration</title>
 </head>
 
 <body>
