--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -20,4 +20,7 @@
       <button><h5>HELP</h5></button>
     </navbar>
   </header>
+  <aside id="sidebar">
+    <section id="user_info_tab" class="sidebar_tab"></section>
+  </aside>
 </body>
