Idle overlay now appears after 30 seconds, rather than on page load. Using a javascript function.

--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -7,7 +7,7 @@
 </head>
 
 <section id="idle_overlay" onclick="hideOverlay()" class="text">
-  <h1>Click to Start</h1>
+  <h1>Press to Start</h1>
 </section>
 <body>
   <header class="text" id="main_header">
