Added search bar to the staff/admin sidebar

--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -32,7 +32,9 @@
       </ul>
     </div>
     <div class="text main">
-      <section class="main_section main_section_active" id="m1">Home Section</section>
+      <section class="main_section main_section_active" id="m1">
+        <h2>Welcome, <?=$_SESSION["staff_username"]?>.</h2>
+      </section>
       <section class="main_section" id="m2">One</section>
       <section class="main_section" id="m3">Two</section>
       <section class="main_section" id="m4">Three</section>
