--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -25,15 +25,21 @@
     <div class="text" id="sidebar">
       <input type="checkbox" id="sidebar_toggle" class="hidden"/>
       <label for="sidebar_toggle" onclick="toggleSidebar()"><span class="left_arrow"></span></label>
+      <div id="sidebar_search_wrapper">
+        <input type="text" placeholder="Search..." id="sidebar_search"></input>
+      </div>
       <ul id="sidebar_contents">
-        <li onclick="toggleMainSection('s1','m1')" class="sidebar_button sidebar_button_active" id="s1"><h3>HOME</h3></li>
-        <li onclick="toggleMainSection('s2','m2')" class="sidebar_button" id="s2"><h3>ONE</h3></li>
-        <li onclick="toggleMainSection('s3','m3')" class="sidebar_button" id="s3"><h3>TWO</h3></li>
-        <li onclick="toggleMainSection('s4','m4')" class="sidebar_button" id="s4"><h3>THREE</h3></li>
+        <spacer></spacer>
+        <li onclick="toggleMainSection('s1','m1')" class="sidebar_button sidebar_button_active" id="s1"><h3>home</h3></li>
+        <li onclick="toggleMainSection('s2','m2')" class="sidebar_button" id="s2"><h4>manage Users</h4></li>
+        <li onclick="toggleMainSection('s3','m3')" class="sidebar_button" id="s3"><h4>manage Staff</h4></li>
+        <li onclick="toggleMainSection('s4','m4')" class="sidebar_button" id="s4"><h4>more</h4></li>
       </ul>
     </div>
     <div class="text main">
-      <section class="main_section main_section_active" id="m1">Home Section</section>
+      <section class="main_section main_section_active" id="m1">
+        <h2>Welcome, <?=$_SESSION["staff_username"]?>.</h2>
+      </section>
       <section class="main_section" id="m2">One</section>
       <section class="main_section" id="m3">Two</section>
       <section class="main_section" id="m4">Three</section>
