--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -23,26 +23,77 @@
   </header>
   <div class="wrapper">
     <div class="text" id="sidebar">
-      <input type="checkbox" id="sidebar_toggle" class="hidden"/>
-      <label for="sidebar_toggle" onclick="toggleSidebar()"><span class="left_arrow"></span></label>
-      <div id="sidebar_search_wrapper">
-        <input type="text" placeholder="Search..." id="sidebar_search"></input>
-      </div>
-      <ul id="sidebar_contents">
-        <spacer></spacer>
-        <li onclick="toggleMainSection('s1','m1')" class="sidebar_button sidebar_button_active" id="s1"><h3>home</h3></li>
-        <li onclick="toggleMainSection('s2','m2')" class="sidebar_button" id="s2"><h4>manage Users</h4></li>
-        <li onclick="toggleMainSection('s3','m3')" class="sidebar_button" id="s3"><h4>manage Staff</h4></li>
-        <li onclick="toggleMainSection('s4','m4')" class="sidebar_button" id="s4"><h4>more</h4></li>
-      </ul>
+      <container>
+        <input type="checkbox" id="sidebar_toggle" class="hidden"/>
+        <label for="sidebar_toggle" onclick="toggleSidebar()"><span class="left_arrow"></span></label>
+        <ul id="sidebar_contents">
+          <li class="sidebar_subtitle"><h2>Menu</h2></li>
+          <li class="sidebar_subtitle"><h3>Information</h3></li>
+          <li onclick="toggleMainSection(this.id,'m1')" class="sidebar_button sidebar_button_active" id="s1"><h4>Home</h4></li>
+          <li onclick="toggleMainSection(this.id,'m2')" class="sidebar_button" id="s2"><h4>Activity</h4></li>
+          <li onclick="toggleMainSection(this.id,'m3')" class="sidebar_button" id="s3"><h4>Sign In Log</h4></li>
+          <li onclick="toggleMainSection(this.id,'m4')" class="sidebar_button" id="s4"><h4>Sign Out Log</h4></li>
+          <li onclick="toggleMainSection(this.id,'m5')" class="sidebar_button" id="s5"><h4>Events</h4></li>
+          <li class="sidebar_subtitle"><h3>Manage Staff</h3></li>
+          <li onclick="toggleMainSection(this.id,'m11')" class="sidebar_button" id="s11"><h4>Change Password</h4></li>
+          <li onclick="toggleMainSection(this.id,'m12')" class="sidebar_button" id="s12"><h4>Show Staff</h4></li>
+          <li onclick="toggleMainSection(this.id,'m13')" class="sidebar_button" id="s13"><h4>Edit Staff</h4></li>
+          <li onclick="toggleMainSection(this.id,'m14')" class="sidebar_button" id="s14"><h4>Add Staff</h4></li>
+          <li onclick="toggleMainSection(this.id,'m15')" class="sidebar_button" id="s15"><h4>Remove Staff</h4></li>
+          <li class="sidebar_subtitle"><h3>Manage Users</h3></li>
+          <li onclick="toggleMainSection(this.id,'m21')" class="sidebar_button" id="s21"><h4>Edit Users</h4></li>
+          <li onclick="toggleMainSection(this.id,'m22')" class="sidebar_button" id="s22"><h4>Add Users</h4></li>
+          <li onclick="toggleMainSection(this.id,'m23')" class="sidebar_button" id="s23"><h4>Remove Users</h4></li>
+          <li class="sidebar_subtitle"><h3>Manage Database</h3></li>
+          <li onclick="toggleMainSection(this.id,'m31')" class="sidebar_button" id="s31"><h4>Edit Locations</h4></li>
+        </ul>
+      </container>
     </div>
     <div class="text main">
       <section class="main_section main_section_active" id="m1">
         <h2>Welcome, <?=$_SESSION["staff_username"]?>.</h2>
       </section>
-      <section class="main_section" id="m2">One</section>
-      <section class="main_section" id="m3">Two</section>
-      <section class="main_section" id="m4">Three</section>
+      <section class="main_section" id="m2">
+        <h2>Activity</h2>
+      </section>
+      <section class="main_section" id="m3">
+        <h2>Sign In Log</h2>
+      </section>
+      <section class="main_section" id="m4">
+        <h2>Sign Out Log</h2>
+      </section>
+      <section class="main_section" id="m5">
+        <h2>Events</h2>
+      </section>
+      <section class="main_section" id="m11">
+        <h2>Manage Staff - Change Password</h2>
+      </section>
+      <section class="main_section" id="m12">
+        <h2>Manage Staff - Show Staff</h2>
+      </section>
+      <section class="main_section" id="m13">
+        <h2>Manage Staff - Edit Staff</h2>
+      </section>
+      <section class="main_section" id="m14">
+        <h2>Manage Staff - Add Staff</h2>
+      </section>
+      <section class="main_section" id="m15">
+        <h2>Manage Staff - Remove Staff</h2>
+      </section>
+
+      <section class="main_section" id="m21">
+        <h2>Manage Users - Edit Users</h2>
+      </section>
+      <section class="main_section" id="m22">
+        <h2>Manage Users - Add Users</h2>
+      </section>
+      <section class="main_section" id="m23">
+        <h2>Manage Users - Remove Users</h2>
+      </section>
+
+      <section class="main_section" id="m31">
+        <h2>Manage Database - Edit Locations</h2>
+      </section>
     </div>
   </div>
 </body>
