--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -22,25 +22,45 @@
   </header>
   <div class="wrapper">
     <div class="text" id="sidebar">
-      <input type="checkbox" id="sidebar_toggle" class="hidden"/>
-      <label for="sidebar_toggle" onclick="toggleSidebar()"><span class="left_arrow"></span></label>
-      <div id="sidebar_search_wrapper">
-        <input type="text" placeholder="Search..." id="sidebar_search"></input>
-      </div>
-      <ul id="sidebar_contents">
-        <li onclick="toggleMainSection('s1','m1')" class="sidebar_button sidebar_button_active" id="s1"><h3>HOME</h3></li>
-        <li onclick="toggleMainSection('s2','m2')" class="sidebar_button" id="s2"><h3>ONE</h3></li>
-        <li onclick="toggleMainSection('s3','m3')" class="sidebar_button" id="s3"><h3>TWO</h3></li>
-        <li onclick="toggleMainSection('s4','m4')" class="sidebar_button" id="s4"><h3>THREE</h3></li>
-      </ul>
+      <container>
+        <input type="checkbox" id="sidebar_toggle" class="hidden"/>
+        <label for="sidebar_toggle" onclick="toggleSidebar()"><span class="left_arrow"></span></label>
+        <ul id="sidebar_contents">
+          <li class="sidebar_subtitle"><h2>Menu</h2></li>
+          <li class="sidebar_subtitle"><h3>Information</h3></li>
+          <li onclick="toggleMainSection(this.id,'m1')" class="sidebar_button sidebar_button_active" id="s1"><h4>Home</h4></li>
+          <li onclick="toggleMainSection(this.id,'m2')" class="sidebar_button" id="s2"><h4>Activity</h4></li>
+          <li onclick="toggleMainSection(this.id,'m3')" class="sidebar_button" id="s3"><h4>Sign In Log</h4></li>
+          <li onclick="toggleMainSection(this.id,'m4')" class="sidebar_button" id="s4"><h4>Sign Out Log</h4></li>
+          <li onclick="toggleMainSection(this.id,'m5')" class="sidebar_button" id="s5"><h4>Events</h4></li>
+          <li class="sidebar_subtitle"><h3>Account</h3></li>
+          <li onclick="toggleMainSection(this.id,'m11')" class="sidebar_button" id="s11"><h4>Change Password</h4></li>
+          <li onclick="toggleMainSection(this.id,'m12')" class="sidebar_button" id="s12"><h4>Customise</h4></li>
+        </ul>
+      </container>
     </div>
     <div class="text main">
       <section class="main_section main_section_active" id="m1">
         <h2>Welcome, <?=$_SESSION["staff_username"]?>.</h2>
       </section>
-      <section class="main_section" id="m2">One</section>
-      <section class="main_section" id="m3">Two</section>
-      <section class="main_section" id="m4">Three</section>
+      <section class="main_section" id="m2">
+        <h2>Activity</h2>
+      </section>
+      <section class="main_section" id="m3">
+        <h2>Sign In Log</h2>
+      </section>
+      <section class="main_section" id="m4">
+        <h2>Sign Out Log</h2>
+      </section>
+      <section class="main_section" id="m5">
+        <h2>Events</h2>
+      </section>
+      <section class="main_section" id="m11">
+        <h2>Account - Change Password</h2>
+      </section>
+      <section class="main_section" id="m12">
+        <h2>Account - Customise</h2>
+      </section>
     </div>
   </div>
 </body>
