Updated staff/admin sidebar support for smaller viewports, now has a scrollbar if it overflows.

--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -23,7 +23,7 @@
   </header>
   <div class="wrapper">
     <div class="text" id="sidebar">
-      <container>
+      <container id="sidebar_contents_container">
         <input type="checkbox" id="sidebar_toggle" class="hidden"/>
         <label for="sidebar_toggle" onclick="toggleSidebar()"><span class="left_arrow"></span></label>
         <ul id="sidebar_contents">
