--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -22,9 +22,9 @@
   </header>
   <div class="wrapper">
     <div class="text" id="sidebar">
-      <container>
-        <input type="checkbox" id="sidebar_toggle" class="hidden"/>
-        <label for="sidebar_toggle" onclick="toggleSidebar()"><span class="left_arrow"></span></label>
+      <input type="checkbox" id="sidebar_toggle" class="hidden"/>
+      <label for="sidebar_toggle" onclick="toggleSidebar()"><span class="left_arrow"></span></label>
+      <container id="sidebar_contents_container">
         <ul id="sidebar_contents">
           <li class="sidebar_subtitle"><h2>Menu</h2></li>
           <li class="sidebar_subtitle"><h3>Information</h3></li>
