--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -35,15 +35,9 @@
           <li onclick="toggleMainSection(this.id,'m4')" class="sidebar_button" id="s4"><h4>Sign Out Log</h4></li>
           <li onclick="toggleMainSection(this.id,'m5')" class="sidebar_button" id="s5"><h4>Events</h4></li>
           <li class="sidebar_subtitle"><h3>Manage Staff</h3></li>
-          <li onclick="toggleMainSection(this.id,'m11')" class="sidebar_button" id="s11"><h4>Change Password</h4></li>
-          <li onclick="toggleMainSection(this.id,'m12')" class="sidebar_button" id="s12"><h4>Show Staff</h4></li>
-          <li onclick="toggleMainSection(this.id,'m13')" class="sidebar_button" id="s13"><h4>Edit Staff</h4></li>
-          <li onclick="toggleMainSection(this.id,'m14')" class="sidebar_button" id="s14"><h4>Add Staff</h4></li>
-          <li onclick="toggleMainSection(this.id,'m15')" class="sidebar_button" id="s15"><h4>Remove Staff</h4></li>
+          <li onclick="toggleMainSection(this.id,'m11')" class="sidebar_button" id="s11"><h4>Edit Staff</h4></li>
           <li class="sidebar_subtitle"><h3>Manage Users</h3></li>
           <li onclick="toggleMainSection(this.id,'m21')" class="sidebar_button" id="s21"><h4>Edit Users</h4></li>
-          <li onclick="toggleMainSection(this.id,'m22')" class="sidebar_button" id="s22"><h4>Add Users</h4></li>
-          <li onclick="toggleMainSection(this.id,'m23')" class="sidebar_button" id="s23"><h4>Remove Users</h4></li>
           <li class="sidebar_subtitle"><h3>Manage Database</h3></li>
           <li onclick="toggleMainSection(this.id,'m31')" class="sidebar_button" id="s31"><h4>Edit Locations</h4></li>
         </ul>
@@ -65,34 +59,123 @@
       <section class="main_section" id="m5">
         <h2>Events</h2>
       </section>
+
       <section class="main_section" id="m11">
-        <h2>Manage Staff - Change Password</h2>
-      </section>
-      <section class="main_section" id="m12">
-        <h2>Manage Staff - Show Staff</h2>
-      </section>
-      <section class="main_section" id="m13">
-        <h2>Manage Staff - Edit Staff</h2>
-      </section>
-      <section class="main_section" id="m14">
-        <h2>Manage Staff - Add Staff</h2>
-      </section>
-      <section class="main_section" id="m15">
-        <h2>Manage Staff - Remove Staff</h2>
+        <h2 class="title">Manage Staff</h2>
+        <div class="table_wrapper">
+          <header>
+            <h2>Staff Accounts</h2>
+            <div class="button_wrapper">
+              <button onclick="toggleHiddenSection('staff_add_section');" class="add_button" id="add_staff_button">Add</button>
+              <button onclick="toggleHiddenSection('staff_remove_section');" class="remove_button" id="remove_staff_button">Remove</button>
+            </div>
+          </header>
+          <table class="table" id="staff_accounts_table">
+            <tr>
+              <th>Username</th>
+              <th>Email</th>
+              <th>Date Added</th>
+              <th>Last Logged In</th>
+              <th></th>
+            </tr>
+            <tr>
+              <td>jsmith</td>
+              <td>john.smith@example.com</td>
+              <td>18/11/22</td>
+              <td>18/11/22 @ 20:13</td>
+              <td><button onclick="toggleHiddenSection('staff_edit_section');" class="blue_button edit_button">Edit</button></td>
+            </tr>
+          </table>
+          <footer/>
+        </div>
+        <section class="hidden_section" id="staff_edit_section">
+          <h3>Edit Staff - 'jsmith'</h3>
+        </section>
+        <section class="hidden_section" id="staff_add_section">
+          <h3>Add Staff Account</h3>
+        </section>
+        <section class="hidden_section" id="staff_remove_section">
+          <h3>Remove Staff Account</h3>
+        </section>
       </section>
 
       <section class="main_section" id="m21">
-        <h2>Manage Users - Edit Users</h2>
-      </section>
-      <section class="main_section" id="m22">
-        <h2>Manage Users - Add Users</h2>
-      </section>
-      <section class="main_section" id="m23">
-        <h2>Manage Users - Remove Users</h2>
+        <h2 class="title">Manage Users</h2>
+        <div class="table_wrapper">
+          <header>
+            <h2>Users</h2>
+            <div class="button_wrapper">
+              <button onclick="toggleHiddenSection('user_add_section');" class="add_button" id="add_staff_button">Add</button>
+              <button onclick="toggleHiddenSection('user_remove_section');" class="remove_button" id="remove_staff_button">Remove</button>
+            </div>
+          </header>
+          <table class="table" id="user_accounts_table">
+            <tr>
+              <th>First Name</th>
+              <th>Second Name</th>
+              <th>Initials</th>
+              <th>Email</th>
+              <th></th>
+            </tr>
+            <tr>
+              <td>John</td>
+              <td>Smith</td>
+              <td>js</td>
+              <td>john.smith@example.com</td>
+              <td><button onclick="toggleHiddenSection('user_edit_section');" class="blue_button edit_button">Edit</button></td>
+            </tr>
+          </table>
+          <footer/>
+        </div>
+        <section class="hidden_section" id="user_edit_section">
+          <h3>Edit User - 'John Smith'</h3>
+        </section>
+        <section class="hidden_section" id="user_add_section">
+          <h3>Add User</h3>
+        </section>
+        <section class="hidden_section" id="user_remove_section">
+          <h3>Remove User</h3>
+        </section>
       </section>
 
       <section class="main_section" id="m31">
-        <h2>Manage Database - Edit Locations</h2>
+        <h2 class="title">Manage Database</h2>
+        <div class="table_wrapper">
+          <header>
+            <h2>Locations</h2>
+            <div class="button_wrapper">
+              <button onclick="toggleHiddenSection('locations_add_section');" class="add_button" id="add_staff_button">Add</button>
+              <button onclick="toggleHiddenSection('locations_remove_section');" class="remove_button" id="remove_staff_button">Remove</button>
+            </div>
+          </header>
+          <table class="table" id="locations_accounts_table">
+            <tr>
+              <th>Location Name</th>
+              <th>Description</th>
+              <th></th>
+            </tr>
+            <tr>
+              <td>Dining Hall</td>
+              <td>Where students go to dine</td>
+              <td><button onclick="toggleHiddenSection('locations_edit_section');" class="blue_button edit_button">Edit</button></td>
+            </tr>
+            <tr>
+              <td>Cafe</td>
+              <td>Where students go to relax</td>
+              <td><button onclick="toggleHiddenSection('locations_edit_section');" class="blue_button edit_button">Edit</button></td>
+            </tr>
+          </table>
+          <footer/>
+        </div>
+        <section class="hidden_section" id="locations_edit_section">
+          <h3>Edit Locations - 'Dining Hall'</h3>
+        </section>
+        <section class="hidden_section" id="locations_add_section">
+          <h3>Add Location</h3>
+        </section>
+        <section class="hidden_section" id="locations_remove_section">
+          <h3>Remove Location</h3>
+        </section>
       </section>
     </div>
   </div>
